--- a/lesson9/task1/src/index.scss
+++ b/lesson9/task1/src/index.scss
@@ -1,43 +1,39 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
 }
 
 #root {
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
-.search {
+.user {
     display: flex;
-    height: 50px;
+    flex-direction: column;
+    margin: auto;
+    align-items: center;
 
-    &__input {
-        flex: 1;
-        border-top-left-radius: 8px;
-        border-bottom-left-radius: 8px;
-        border: 3px solid #ff7f50;
-        border-right: none;
-        padding: 8px;
-        font-size: 24px;
-        outline: none;
+    &__avatar {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
     }
 
-    &__button {
-        border-top-right-radius: 8px;
-        border-bottom-right-radius: 8px;
-        border: 3px solid #ff7f50;
-        border-left: none;
-        width: 80px;
-        text-transform: uppercase;
+    &__info {
+        text-align: center;
+        font-size: 24px;
+        margin: 32px;
+    }
+
+    &__name {
         font-weight: 700;
-        background: #ff7f50;
-        color: #fff;
-        cursor: pointer;
+    }
+
+    &__location {
+        opacity: 0.5;
+        margin-left: 16px;
     }
 }
